--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                 Updates
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item disabled" href="#" data-toggle="tooltip" data-placement="right" title="Items in development">Development</a>
+                <a class="dropdown-item" href="/updates/development" data-toggle="tooltip" data-placement="right" title="Items in development">Development</a>
                 <a class="dropdown-item disabled" href="#" data-toggle="tooltip" data-placement="right" title="Items in testing">Testing</a>
                 <a class="dropdown-item disabled" href="#" data-toggle="tooltip" data-placement="right" title="Items that have been released to the server.">Release</a>
                 <div class="dropdown-divider"></div>
